# Gtk4D

./: .gitignore  .gitmodules  AUTHORS  README.md  dub.json  meson.build  meson_options.txt
api/: APILookup.txt  APILookupGLib.txt  APILookupSoup2.txt  APILookupSoup3.txt  meson.build
api/cairo/: Device.d
build-aux/glob/: glob.py
examples/adwaita/: dub.json  dub.selections.json  meson.build
examples/gtk/1_hello_world/: dub.json  dub.selections.json  meson.build
examples/gtk/2_button_click/: dub.json  meson.build
examples/shumate/: dub.json  meson.build
lib/: meson.build
pkg/: meson.build
src/: APILookup.txt  meson.build
tests/: meson.build
tests/adw/: app.d  meson.build
tests/gobject/: meson.build
