project('Gtk4D', 'd',
    meson_version : '>=0.63',
    license: 'LGPL-3.0',
    version: '0.1.0'
)

############################## Gtk/GObject Dependencies ######################################

glib_dep          = dependency('glib-2.0', version: '2.74.3')
gmodule_dep       = dependency('gmodule-2.0', version: '2.74.3')
gobject_dep       = dependency('gobject-2.0', version: '2.74.3')
gio_dep           = dependency('gio-2.0', version: '2.74.3')
gtk_dep           = dependency('gtk4', version: '4.8.1')
gdkpixbuf_dep     = dependency('gdk-pixbuf-2.0', version: '2.42.9')
graphene_dep      = dependency('graphene-1.0', version: '1.11.1')
atk_dep           = dependency('atk', version: '2.46.0')
gthread_dep       = dependency('gthread-2.0', version: '2.74.3')
harfbuzz_dep      = dependency('harfbuzz', version: '2.7.4')
rsvg_dep          = dependency('librsvg-2.0', version: '2.54.4')
soup_dep          = dependency('libsoup-3.0', version: '3.2.0')
pango_dep         = dependency('pango', version: '1.50.10')
shumate_dep       = dependency('shumate-1.0', version: '1.1.alpha')
sourceview_dep    = dependency('gtksourceview-5', version: '5.6.1')
adw_dep           = dependency('libadwaita-1', version: '1.2.0')  
cairo_dep         = dependency('cairo', version: '1.16.0')
introspection_dep = dependency('gobject-introspection-1.0', version: '1.74.0')

############################ General defines for path and directory name ###############################

# library soversion
project_soversion = 0

# defined Paths
prefix = get_option ('prefix')
sourceRoot = meson.project_source_root()
buildRoot = meson.project_build_root()
apiDir = join_paths(sourceRoot, 'api')
genDir = join_paths(sourceRoot, 'generated')
gtkdDir = join_paths(genDir,'gtkd')
cairoDir = join_paths(genDir,'cairo')

# Array containing a list of short names of all library's
# All names are the same as the directory names that get genrated
# girtod.
libsToGenerate = ['gtkd', 'cairo', 'adw', 'atk', 'gdk', 'gdkpixbuf', 'gio', 'glib', 'gobject', 'graphene', 
                  'gsk', 'gthread', 'gtk', 'harfbuzz', 'pango', 'rsvg', 'shumate', 'soup', 'sourceview']

# All the C libraries for girtod will generate the bindings.
gtk4d_dependencies = [glib_dep, gthread_dep, gobject_dep, gmodule_dep, gio_dep, cairo_dep, gdkpixbuf_dep, atk_dep, pango_dep, rsvg_dep, adw_dep, soup_dep, graphene_dep, adw_dep, gtk_dep, introspection_dep]

######################################## girtod #############################################
# Api caontains all the girtod txt files that are used by girtod.
# Also contains a meson file that uses run_command to generate the bindings 
# using girtod.
subdir('api')

################################### install generated headers ###############################
# Folder contains the generated results of girtod
# And contains a meson file that prints all the name of the generated interface files 
# generated by by girtod and prints these to stdout and creates file() objects 
# and installs the interface header files to the include directory.
subdir('generated')

# includes directorie header interface files
localinc = include_directories('generated')

# includes library
libinc = include_directories('lib')

# compile the actual library
subdir('lib')

# generate pkg-config file
subdir('pkg')

# in case of subproject, declare the compiled library as dependency
gtk4_dep = declare_dependency(
    link_with: [gtk4d_lib],
    include_directories: [inc, libinc, localinc],
    dependencies: [gtk4d_dependencies],
)

######################################### run the tests #######################################

# Run the tests inside test folder
# TODO: Create more tests then there are right now.
subdir('tests')